--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
 }
 
 body{
-    background-color: #0c0f20;
+    background-color: #090b17;
 }
 
 .card{
     text-align: center;
     margin: 50px auto 0;
     max-width: 380px;
-    background: linear-gradient(#7fe1ff, #4a39b6);
+    background: linear-gradient(20deg, #7fe1ff, #171f79);
     border-radius: 20px;
     color: #fff;
     padding: 30px;
